@@ -3,9 +3,9 @@ package co.com.mrsoft.test.java9;
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.io.InputStream;
+import java.net.*;
+import java.net.http.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.awt.Image;
@@ -13,10 +13,15 @@ import java.awt.image.MultiResolutionImage;
 import java.awt.image.BaseMultiResolutionImage;
 
 /**
- * Samples of Multiresolution Image API
+ * Samples of Multiresolution Image API and new HttpClient API.
+ *
+ * It requires you add the next modules:
+ *  - java.desktop for awt components.
+ *  - java.net.http for new http components.
  */
 public class Example9 {
-    public static void main(String[] args) throws IOException {
+    public static void main(String[] args) throws IOException, URISyntaxException, InterruptedException {
+        // List of url strings to load.
         List<String> imgUrls = List.of("http://www.tutorialspoint.com/java9/images/logo.png",
                 "http://www.tutorialspoint.com/java9/images/mini_logo.png",
                 "http://www.tutorialspoint.com/java9/images/large_logo.png");
@@ -24,15 +29,26 @@ public class Example9 {
         List<Image> images = new ArrayList<>();
 
         for (String urlStr : imgUrls) {
-            URL url = new URL(urlStr);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            URI uri = URI.create(urlStr);
 
-            // This is a trick to avoid http 403.
-            connection.setRequestProperty(
-                    "User-Agent",
-                    "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_7_5) AppleWebKit/537.31 (KHTML, like Gecko) Chrome/26.0.1410.65 Safari/537.31");
+            // New http component representation of a http request through Builder pattern.
+            HttpRequest request = HttpRequest.newBuilder()
+                                    .uri(uri)
+                                    // Trick to avoid http 403 error code
+                                    .header("User-Agent", "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_7_5) AppleWebKit/537.31 (KHTML, like Gecko) Chrome/26.0.1410.65 Safari/537.31")
+                                    .GET()
+                                    .build();
 
-            BufferedImage image = ImageIO.read(connection.getInputStream());
+            // New http component representation of a http response.
+            HttpResponse<InputStream> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofInputStream());
+
+            // Check http status code
+            if(response.statusCode() != 200) {
+                throw new IOException("Invalid http status " + response.statusCode());
+            }
+
+            // Read the body of the http response
+            BufferedImage image = ImageIO.read(response.body());
             images.add(image);
         }
 
